feat: Adding game history and beautify the dashboard

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -100,6 +100,18 @@
   }
 }
 
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
 .animate-float {
   animation: float 3s ease-in-out infinite;
 }
